Bug 114506 - Wrong menu label for "Set as Tag Thumbnail" Drag and Drop operation.
Summary: Wrong menu label for "Set as Tag Thumbnail" Drag and Drop operation.
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Menus (other bugs)
Version First Reported In: 0.8.0
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2005-10-16 16:03 UTC by Tung NGUYEN
Modified: 2024-05-29 02:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 8.4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tung NGUYEN 2005-10-16 16:03:15 UTC
Version:           0.8.0-beta2 (using KDE KDE 3.4.2)
Installed from:    Compiled From Sources
OS:                Linux

In Tags view, after dragging and dropping a photo to its tag, in the opened menu, I can see "Set as Album Thumbnail" instead of "Set as Tag Thumbnail".
Comment 1 Joern Ahrens 2005-10-16 16:38:24 UTC
SVN commit 471122 by jahrens:

BUG: 114506

 M  +1 -1      tagfolderview.cpp  


--- trunk/extragear/graphics/digikam/digikam/tagfolderview.cpp #471121:471122
@@ -647,7 +647,7 @@
             else
             {
                 QPopupMenu popMenu(this);
-                popMenu.insertItem(i18n("Set as Album Thumbnail"), 12);
+                popMenu.insertItem(i18n("Set as Tag Thumbnail"), 12);
                 popMenu.insertSeparator(-1);
                 popMenu.insertItem( SmallIcon("cancel"), i18n("C&ancel") );
 
Comment 2 Tung NGUYEN 2005-10-16 16:59:31 UTC
Thank you.
Comment 3 caulier.gilles 2005-10-16 17:53:36 UTC
Fixed by Joern. Closed...

Gilles