BUG: 114506

svn path=/trunk/extragear/graphics/digikam/; revision=471122